x updated: `LOAD()` added a callback function
x updated: components support `encoding="utf8"` attribute for `<file` tag (default: `base64`)
x updated: `EventEmitter2` supports a new argument `obj`, example: `U.EventEmitter2(obj)` or supports `.extend` method: `U.EventEmitter2.extend(proto)`
x updated: `UID()` generates new types of `UID` with 100% backward compatibility

- fixed: schemas validation
- fixed: error handling in dynamic schemas
- fixed: CSS variables
- fixed: CSS variables with additional `!important` clause
- fixed: `controller.proxy()` with Gzip/Deflate compression
- fixed: HTTP status code with `204` in `REQUEST()`
- fixed: `cookies` in `WEBSOCKETCLIENT`
- fixed: `REQUEST()` with `json` flag and with `null` and `''` value
- fixed: rendering components in `layout`
- fixed: resources, there was a bug with reading of value from `default.resource`
- fixed: too many open files in `res.image()`
- fixed: too many open files in `res.filefs()`
- fixed: Schema `Boolean` parser
- fixed: renamed `F.stats.request.path` to `F.stats.request.patch`
- fixed: SMTP sender (a problem with auth mechanism with some mail servers)
- fixed: filter in `F.backup()`
- fixed: paths for stored directories in `F.backup()`
- fixed: uploading files
- fixed: `U.getExtension()` by @molda

x renamed: `*.routeScript` to `*.public_js`
x renamed: `*.routeStyle` to `*.public_css`
x renamed: `*.routeFont` to `*.public_font`
x renamed: `*.routeVideo` to `*.public_video`
x renamed: `*.routeImage` to `*.public_image`
x renamed: `*.routeDownload` to `*.public_download`
x renamed: `*.routeStatic` to `*.public`
x renamed: `controller.viewCompile()` to `controller.view_compile()`
- renamed: event `cache-set` to `cache_set`:
- renamed: event `controller-render-meta` to `controller_render_meta`
- renamed: event `request-end` to `request_end`
- renamed: event `websocket-begin` to `websocket_begin`
- renamed: event `websocket-end` to `websocket_end`
- renamed: event `request-begin` to `request_begin`