@@ -93,6 +93,7 @@ x updated: `LOAD()` added a callback function
 x updated: components support `encoding="utf8"` attribute for `<file` tag (default: `base64`)
 x updated: `EventEmitter2` supports a new argument `obj`, example: `U.EventEmitter2(obj)` or supports `.extend` method: `U.EventEmitter2.extend(proto)`
 x updated: `UID()` generates new types of `UID` with 100% backward compatibility
+- updated: `FILESTORAGE()` now it works in cluster mode
 
 - fixed: schemas validation
 - fixed: error handling in dynamic schemas
